# StyleTTS2

./: pyproject.toml
src/styletts2/: requirements.txt  tts.py
