[tool.poetry]
name = "styletts2"
version = "0.1.6"
description = "StyleTTS 2: Towards Human-Level Text-to-Speech through Style Diffusion and Adversarial Training with Large Speech Language Models. Original authors: Yinghao Aaron Li, Cong Han, Vinay S. Raghavan, Gavin Mischler, Nima Mesgarani. "
authors = ["Sidharth Rajaram <rajaram@berkeley.edu>"]
homepage = "https://github.com/sidharthrajaram/StyleTTS2"
repository = "https://github.com/sidharthrajaram/StyleTTS2"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

soundfile = "*"
torchaudio = "*"
munch = "^4.0.0"
torch = "*"
pydub = "*"
PyYAML = "*"
librosa = "^0.10.1"
nltk = "^3.8.1"
matplotlib = "*"
accelerate = "^0.25.0"
langchain = "^0.1.0"

huggingface-hub = "*"
transformer = "*"
cached-path = "*"
filelock = "*"

einops = "*"
einops-exts = "*"
scipy = "*"
tqdm = "*"
typing = { version = "*", python = "<3.5" }
typing-extensions = "^4.9.0"

gruut = "^2.3.4"
gruut-ipa = "^0.13.0"
gruut-lang-en = "^2.0.0"
networkx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
