[tool.poetry]
name = "styletts2"
version = "0.1.6"
description = "StyleTTS 2: Towards Human-Level Text-to-Speech through Style Diffusion and Adversarial Training with Large Speech Language Models. Original authors: Yinghao Aaron Li, Cong Han, Vinay S. Raghavan, Gavin Mischler, Nima Mesgarani. "
authors = ["Sidharth Rajaram <rajaram@berkeley.edu>"]
homepage = "https://github.com/sidharthrajaram/StyleTTS2"
repository = "https://github.com/sidharthrajaram/StyleTTS2"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "*"

soundfile = "*"
torchaudio = "*"
munch = "*"
torch = "*"
pydub = "*"
PyYAML = "*"
librosa = "*"
nltk = "*"
matplotlib = "*"
accelerate = "*"
langchain = "*"

huggingface-hub = "*"
transformer = "*"
cached-path = "*"
filelock = "*"

einops = "*"
einops-exts = "*"
scipy = "*"
tqdm = "*"
typing = "*"
typing-extensions = "*"

gruut = "*"
gruut-ipa = "*"
gruut-lang-en = "*"
networkx = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
